# MagicMatrix

./: .gitignore  CMakeLists.txt  main.cpp
core/: GameTypes.h  MagicSquareBoard.cpp  MagicSquareBoard.cpp.autosave  MagicSquareBoard.h
session/: GameSession.cpp  GameSession.h
ui/: CellButton.cpp  CellButton.h  MagicMatrixBoard.cpp  MagicMatrixBoard.h  mainwindow.cpp
